# project-bullet

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsss.txt  Makefile  README.md  build_android.sh  cmake_install.cmake  compile_commands.json  debug_android.sh  hehe  imgui.ini  main.cpp  mains.cpp  package-lock.json  tailwind.config.js  test.cpp  vite.config.js  vulkan_new
.cache/clangd/index/: _fixes.hpp.311F29B9EE603CDD.idx  _vectorize.hpp.C4D04C94C1A1186C.idx  common.hpp.D0843406C880484E.idx  compute_common.hpp.121803664FE55C62.idx  compute_vector_decl.hpp.CB17180F6C135353.idx  compute_vector_relational.hpp.91F15508FD15F3A4.idx  constants.hpp.E895B4C20678B818.idx  constants.inl.942DBA316F912634.idx  exponential.hpp.0DCBF59A93ADC39B.idx  func_common.inl.C299C9600AC3586A.idx  func_exponential.inl.C9FECACE20FBF871.idx  func_geometric.inl.9F4BDC1B525BE88E.idx  func_integer.inl.261D2CE578C2ECC1.idx  func_matrix.inl.3C74DD748E5499F0.idx  func_packing.inl.F62D193884B20C69.idx  func_trigonometric.inl.6AE3EC2B7971FBB1.idx  func_vector_relational.inl.C4E0A2D239D8609E.idx  fwd.hpp.1494780637CE0213.idx  geometric.hpp.A16B00A39FE8F57E.idx  glm.hpp.779A69F31CFA6FAD.idx  imconfig.h.68346CD365B0BA82.idx  imgui.cpp.27F2291FF1236FFD.idx  imgui.h.1459D8D593541A82.idx  imgui_demo.cpp.0343C142B6B50937.idx  imgui_draw.cpp.F9D9D5D62CA8AA82.idx  imgui_impl_glfw.cpp.BDFFCFF32C6F6F7C.idx  imgui_impl_glfw.h.26CDF549BAC813C2.idx  imgui_impl_vulkan.cpp.3D8F7500F336685E.idx  imgui_impl_vulkan.h.A7C1D0210902D4F7.idx  imgui_internal.h.50EAE85FAF14CA92.idx  imgui_tables.cpp.1290AD903F5ECF15.idx  imgui_widgets.cpp.A07C832FCCF5B227.idx  imstb_rectpack.h.826D2C8BA617803E.idx  imstb_textedit.h.12EE111D8633A5A5.idx  imstb_truetype.h.6A09E106A423BF75.idx  integer.hpp.4A8DFCFE594A9841.idx  main.cpp.C205CA5C218B9A0D.idx  mat2x2.hpp.4BFB6101629C8B0C.idx  mat2x3.hpp.4C42C7E28D1AE5D0.idx  mat2x4.hpp.3AF74071039B3BAA.idx  (+125 more)
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
android/app/src/main/cpp/game-activity/: GameActivity.h  GameActivityConstants.h  GameActivity_events.h
app/Console/Commands/: GenerateSitemap.php
config/: services.php
lib/: char.cpp  char.h  constant.h  ui.cpp  ui.h
lib/app/: app.cpp  app.h  battle.cpp  gameConstant.h
lib/app/mechanics/: attacks.cpp  enemies.cpp  mechanics.cpp  mechanics.h  weapons.cpp
lib/char/: char.cpp  char.h  mob.h
lib/levels/: battle.cpp  level.h  world.h
lib/logic/: battleEvent.cpp  logic.h
lib/object/: tilemap.cpp  tools.cpp
lib/physics/: physics.cpp
lib/texture/: texture.cpp  texture.h
lib/ui/: dialog.h  ui.cpp  ui.h
lib/vulkan/: application.cpp  buffer.cpp  descriptor.cpp  draw.cpp  init.cpp  init.h  pipelines.cpp  pool.cpp  texture.cpp  variable.cpp  vulkan_helper.cpp
lib/vulkan/draw/: record_command.cpp
public/: sitemap.xml
resources/css/: app.css
resources/js/: gmap.js  header.js  slider.js
resources/views/: home.blade.php
shaders/: battle.frag  battle.frag.spv  battle.vert  battle.vert.spv  debug_line.frag  debug_line.vert  debug_line.vert.spv  frag.spv  shader.frag  shader.vert  test.vert  tvert.spv  vert.spv  world.frag  world.vert
